# mutiny

./: .gitignore  README.md
.github/workflows/: test_integration.yml  test_mutiny-app.yml  test_mutiny.yml  test_mutinyd.yml
docs/: api.md  tutorial.md
examples/chat/: events.js  index.html  main.js  mutiny.json  nick.js  signaller.js  state.js  style.css
examples/chat/components/: header.js  message-history.js  peers.js  send-message-form.js
examples/chat/lib/: events.js
examples/ping/: index.html  mutiny.json
fe/: fe  main.ts
fed/: Cargo.toml
fed/src/: main.rs
fes/: main.ts
lib/: client.ts  manifest.ts  streams.ts
mutiny/: deno.json  main.ts  mutiny
mutiny-app/: deno.json  main.ts  mutiny-app
mutiny-app/src/: main.ts
mutiny-app/tests/: main.test.ts
mutiny/src/: assert.ts  client.ts  eventstream.ts  main.ts  server.ts
mutiny/src/commands/: dial.ts  help.ts  info.ts  peers.ts  serve.ts
mutiny/tests/: main.test.ts
mutinyd/: Cargo.toml
mutinyd/src/: client.rs  config.rs  dirs.rs  main.rs  protocol.rs  server.rs  store.rs  swarm.rs
tests/: README  cli_local_peer_id.test.ts  deno.json
tests/data/cli_local_peer_id/: data.db  identity.key
