[package]
name = "fed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "quic", "tls", "dns", "noise", "yamux", "websocket", "ping", "macros", "tokio", "gossipsub", "mdns"] }
