[package]
name = "mutinyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "quic", "tls", "dns", "noise", "yamux", "websocket", "ping", "macros", "tokio", "gossipsub", "identify", "mdns", "request-response", "cbor"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
rusqlite = "0.31.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11"
serde_json = "1.0.120"
error_set = "0.3.2"
clap = { version = "4.5.8", features = ["derive"] }
